Autocaps, auto-focus and auto-word-complete in forms for  for thing name

--- a/app/views/things/_quick_search.html.erb
+++ b/app/views/things/_quick_search.html.erb
@@ -4,3 +4,4 @@
     <input type="submit" name="commit" value="Quick Search">
   </form>
 </div>
+<span class="ui-autocomplete-faux" style="display:none;"></span></br>
