--- a/app/views/things/_form.html.erb
+++ b/app/views/things/_form.html.erb
@@ -12,8 +12,8 @@
 
 <div class="form-group">
   <%= f.label :name, class: "col-lg-3 control-label" %>
-  <div class="col-lg-9">
-    <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+  <div class="col-lg-9 ui-widget">
+    <%= f.text_field :name, class: "form-control", placeholder: "Name", autocapitalize: "words" %>
   </div>
 </div>
 <div class="form-group">
@@ -22,29 +22,41 @@
     <%= f.select :parent_id, @containers.collect {|p| [ p.name, p.id ] }, {}, class: "form-control" %>
   </div>
 </div>
-<div class="form-group">
-  <%= f.label :description, class: "col-lg-3 control-label" %>
-  <div class="col-lg-9">
-    <%= f.text_area :description, class: "form-control", placeholder: "Description" %>
+<%= link_to "More...", '#', id: 'show-more'  %>
+<div id="more" style="display: none">
+  <div class="form-group">
+    <%= f.label :description, class: "col-lg-3 control-label" %>
+    <div class="col-lg-9">
+      <%= f.text_area :description, class: "form-control", placeholder: "Description" %>
+    </div>
   </div>
-</div>
-<div class="form-group">
-  <%= f.label :acquired_on, class: "col-lg-3 control-label" %>
-  <div class="col-lg-9">
-    <%= f.date_field :acquired_on, class: "form-control" %>
+  <div class="form-group">
+    <%= f.label :acquired_on, class: "col-lg-3 control-label" %>
+    <div class="col-lg-9">
+      <%= f.date_field :acquired_on, class: "form-control" %>
+    </div>
   </div>
-</div>
-<div class="form-group">
-  <%= f.label :cost, class: "col-lg-3 control-label" %>
-  <div class="col-lg-9">
-    <%= f.text_field :cost, class: "form-control" %>
+  <div class="form-group">
+    <%= f.label :cost, class: "col-lg-3 control-label" %>
+    <div class="col-lg-9">
+      <%= f.text_field :cost, class: "form-control" %>
+    </div>
   </div>
-</div>
-<div class="form-group">
-  <%= f.label :value, class: "col-lg-3 control-label" %>
-  <div class="col-lg-9">
-    <%= f.text_field :value, class: "form-control" %>
+  <div class="form-group">
+    <%= f.label :value, class: "col-lg-3 control-label" %>
+    <div class="col-lg-9">
+      <%= f.text_field :value, class: "form-control" %>
+    </div>
   </div>
 </div>
 
-<%= f.submit :"aria-hidden" => true, class: "hidden" %>
+<script type="text/javascript">
+  $('#thing_name').autoWordComplete();
+  $('.modal').on('shown.bs.modal', function() {
+    $('#thing_name').putCursorAtEnd();
+  })
+  $('#show-more').click(function() {
+    $('#more').toggle();
+    $(this).hide();
+  });
+</script>
