--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
 
   <div id="main-container" class="container">
     <%= render 'layouts/navigation' %>
+    <div class="row">
+      <div class="col-xs-12">
+        <% flash.each do |name, msg| -%>
+          <%= content_tag :div, msg, class: "alert alert-#{name}" %>
+        <% end -%>
+      </div>
+    </div>
     <div id="content" class="row">
       <div class="col-xs-12">
         <%= yield %>
