--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -1,4 +1,5 @@
 // @import "base";
+@import "compass/utilities/general/clearfix";
 @import "styleguide";
 
 .name-bar {
@@ -11,12 +12,13 @@
   border: 2px solid #888;
   padding: 0px;
   min-height: 400px;
-  max-height: 400px;
+  // max-height: 400px;
   overflow: auto;
   background: #ddd;
   .child {
     padding: 1px 3px;
     border-bottom: 1px solid #aaa;
+    @include clearfix;
     // font-size: 11px;
     color: #666;
     .num_contained {
