Select2 Tags input working.  Controller support.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,6 @@
   </div>
   <%= render "layouts/modal_templates" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= render_raj_json %>
 </body>
 </html>
