--- a/app/assets/stylesheets/_select2.css.scss
+++ b/app/assets/stylesheets/_select2.css.scss
@@ -17,9 +17,32 @@
   .select2-container-multi .select2-choices .select2-search-choice-focus {
     background: darken($color, 4%);
   }
-
+  .select2-container-multi {
+    width: 100%;
+  }
+  .select2-container-multi .select2-choices {
+    // border: none;
+    // background-image: none;
+    .select2-search-choice {
+      line-height: 1em;
+    }
+    .select2-search-field input {
+      // padding: 0;
+    }
+  }
 }
 
 .tag-select {
   @include select2-tag(#c8efd1);
+}
+
+.tag-select {
+  display: inline-block;
+  margin-bottom: 5px;
+  select {
+    display: none;
+  }
+  select, ul {
+    min-width: 100%;
+  }
 }
