--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -11,9 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name, class: "col-lg-3 control-label" %>
+    <div class="col-lg-9">
+      <%= f.text_field :name %>
+    </div>
   </div>
   <div class="actions">
     <%= f.submit %>
