--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,12 +1,10 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Tags</h1>
 
-<table>
+<table class="table table-striped table-responsive">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -14,7 +12,6 @@
     <% @tags.each do |tag| %>
       <tr>
         <td><%= tag.name %></td>
-        <td><%= link_to 'Show', tag %></td>
         <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
         <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
