Use select2-rails gem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 //= require ./things
 //= require ./jquery-ui
 //= require select2
+//= require select2-bootstrap
 
 @import "base";
 @import "font_awesome";
