Temporarily change header color in development mode to avoid entering real data by accident.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,15 @@
   visibility: none;
   display: none;
 }
+
+body.development {
+  .navbar-inverse {
+    $development-color: #BF0360;
+    background-color: $development-color;
+    border-color: $development-color;
+    .navbar-nav li a {
+      color: #DA83D5;
+    }
+  }
+
+}
