Make quick search submit a button

--- a/app/views/things/_quick_search.html.erb
+++ b/app/views/things/_quick_search.html.erb
@@ -1,7 +1,7 @@
 <div id="quick-search" class="ui-widget">
   <form action="<%= things_path %>" >
     <input type="text" name="query" val="">
-    <input type="submit" name="commit" value="Quick Search">
+    <input type="submit" name="commit" value="Quick Search" class="btn btn-sm btn-primary">
   </form>
 </div>
 <span class="ui-autocomplete-faux" style="display:none;"></span></br>
