--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,12 @@
   display: none;
 }
 
+#quick-search {
+  input[type="submit"] {
+    margin-top: 10px;
+  }
+}
+
 body.development {
   .navbar-inverse {
     $development-color: #BF0360;
