--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 //= require bootstrap_and_overrides
 //= require jqtree
+//= require raj
 //= require_self
 //= require ./things
 //= require ./jquery-ui
