Use Rails url helpers in coffee_script

--- a/app/assets/javascripts/prefix_search.js.coffee.erb
+++ b/app/assets/javascripts/prefix_search.js.coffee.erb
@@ -1,5 +1,5 @@
 class PrefixNameSearch
-  source_url: '/things/name_search'
+  source_url: '<%= ::Rails.application.routes.url_helpers.name_search_things_path %>'
 
   constructor: ->
 
