Wire up RAJ modals

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,5 +29,6 @@
   <%= render "layouts/modal_templates" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= render_raj_json %>
+  <%= render_raj_modal %>
 </body>
 </html>
