--- a/app/views/marked_things/index.html.erb
+++ b/app/views/marked_things/index.html.erb
@@ -12,11 +12,11 @@
     <div class="select-actions">
       <%= link_to "Move", "#", class: "a-move-to btn btn-sm btn-info" %>
       <%= link_options = {data: {confirm: "Are you sure you want to unselect all objects?"},
-        method: :post, title: "Unselect All", class: "btn btn-warning btn-sm"}
+        title: "Unselect All", class: "btn btn-warning btn-sm"}
       (link_options[:disabled] = 'disabled') if @things.empty?
       link_to "Clear", clear_marked_things_path, link_options %>
       <%= link_options = {data: {confirm: "Are you sure you want to destroy all selected objects?"},
-        method: :post, title: "Destroy Selected", class: "btn btn-danger btn-sm"}
+        title: "Destroy Selected", class: "btn btn-danger btn-sm"}
       (link_options[:disabled] = 'disabled') if @things.empty?
       link_to "Destroy", destroy_marked_things_path, link_options %>
     </div>
