--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,3 +52,14 @@ body.development {
   }
 
 }
+
+.alert {
+  position: absolute;
+  right: 15px;
+}
+
+form#new_tag {
+  position: absolute;
+  top: 2.4em;
+  left: 10em;
+}
