--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing Tags</h1>
+<h1>Tags</h1>
+
+<%= render 'form' %>
 
 <table class="table table-striped table-responsive">
   <thead>
@@ -18,7 +20,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Tag', new_tag_path %>
