Enable Turbo Links

--- a/app/assets/javascripts/tree.js.coffee.erb
+++ b/app/assets/javascripts/tree.js.coffee.erb
@@ -33,7 +33,7 @@ eventNodeMove = (e) ->
       target_id: target_node.id
 
 
-$ ->
+$(document).on "ready page:change", ->
   window.$tree = $('#tree')
   $tree.tree
     dragAndDrop: true
