--- a/app/views/things/_form.html.erb
+++ b/app/views/things/_form.html.erb
@@ -13,7 +13,7 @@
 <div class="form-group">
   <%= f.label :name, class: "col-lg-3 control-label" %>
   <div class="col-lg-9 ui-widget">
-    <%= f.text_field :name, class: "form-control", placeholder: "Name", autocapitalize: "words" %>
+    <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
   </div>
 </div>
 <div class="form-group">
