Change modal to inline widget

--- a/app/assets/javascripts/things.js.coffee.erb
+++ b/app/assets/javascripts/things.js.coffee.erb
@@ -10,7 +10,6 @@ $(document).on 'shown.bs.modal', '.modal', ->
     $(this).hide()
     false
 
-  modal = $(this)
   $("div.tag-select input").each ->
     el = $(this)
     select2_data = Boxes.get_select2_tags_data()
@@ -23,19 +22,7 @@ $(document).on 'shown.bs.modal', '.modal', ->
       multiple: true
       data: select2_data
 
-  # $("select#thing_parent_id").each ->
-  #   el = $(this)
-  #   # select2_data = Boxes.get_select2_tags_data()
-  #   # placeholder = "Click here to add tags"
-  #   el.select2
-  #     # placeholder: placeholder
-  #     allowClear: false
-  #     minimumInputLength: 0
-  #     minimumResultsForSearch: -1
-  #     # multiple: true
-  #     # data: select2_data
-
-$('a.a-move-to').click ->
+$(document).on 'click', 'a.a-move-to', ->
   $tree = $('#tree')
   if selected_node = $tree.tree('getSelectedNode')
     container_id = selected_node.id
@@ -50,3 +37,66 @@ $('a.a-move-to').click ->
     alert("Choose a container using the tree control to move selected objects inside of it.")
   return false
 
+$(document).on 'click', 'a.a-new-thing', ->
+  a = $(this)
+  href = a.attr('href')
+  jqXHR = $.ajax
+    url: href
+    dataType: 'html'
+    type: 'get'
+  jqXHR.success (data) ->
+    $('#inline-widget').hide()
+    $('#inline-widget').html(data)
+    $('#inline-widget').slideDown()
+  false
+
+class InlineWidget
+  selector: '#inline-widget'
+
+  constructor: ->
+    @widget = $(@selector)
+
+  open: (html) =>
+    @widget.hide()
+    @widget.html(html)
+    @widget.slideDown()
+
+  close: =>
+    @widget.slideUp()
+    @widget.html('')
+
+$(document).on "ready page:change", ->
+  window.inlineWidget = new InlineWidget
+
+$(document).on 'click', 'a.a-edit-thing', ->
+  a = $(this)
+  href = a.attr('href')
+  jqXHR = $.ajax
+    url: href
+    dataType: 'html'
+    type: 'get'
+  jqXHR.success (data) =>
+    inlineWidget.open(data)
+    $('#thing_name').autoWordComplete()
+    # $('#thing_name').putCursorAtEnd() # causes weirdness on iOS
+    $('#show-more').click ->
+      $('#more').toggle()
+      $(this).hide()
+      false
+
+    $("div.tag-select input").each ->
+      el = $(this)
+      select2_data = Boxes.get_select2_tags_data()
+      placeholder = "Click here to add tags"
+      el.select2
+        placeholder: placeholder
+        allowClear: true
+        minimumInputLength: 0
+        minimumResultsForSearch: -1
+        multiple: true
+        data: select2_data
+    $.raj.bind_hide_on_user_intent_events(a, inlineWidget.widget, inlineWidget.close)
+  false
+
+$(document).on 'click', 'a.a-close-widget', ->
+  inlineWidget.close()
