--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,10 @@
         <% end -%>
       </div>
     </div>
+    <div class="row">
+      <div id="inline-widget" class="col-xs-8">
+      </div>
+    </div>
     <div id="content" class="row">
       <div class="col-xs-12">
         <%= yield %>
