--- a/app/views/things/edit.html.erb
+++ b/app/views/things/edit.html.erb
@@ -1,9 +1,14 @@
-<div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-  <h4 class="modal-title" id="myModalLabel">Update</h4>
-</div>
-
 <%= form_for(@thing, html: {class: "form-horizontal"}) do |f| %>
+  <div class="modal-footer">
+    <%= link_to "Cancel", '#', class: "btn btn-sm btn-clear a-close-widget" %>
+    <%=
+      link_options = {data: {confirm: "Are you sure you want to delete #{@thing.name}?"},
+        method: :delete, title: "Delete #{@thing.name}", class: "btn btn-danger btn-sm"}
+      (link_options[:disabled] = 'disabled') if @thing.children.any?
+      link_to "Delete", @thing, link_options
+    %>
+    <%= f.submit 'Update', class: "btn btn-primary btn-sm" %>
+  </div>
   <div class="modal-body">
     <div class="row">
       <div class="col-lg-12">
@@ -12,7 +17,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <%= link_to "Cancel", '#', :"data-dismiss" => "modal", class: "btn btn-sm btn-clear" %>
+    <%= link_to "Cancel", '#', class: "btn btn-sm btn-clear a-close-widget" %>
     <%=
       link_options = {data: {confirm: "Are you sure you want to delete #{@thing.name}?"},
         method: :delete, title: "Delete #{@thing.name}", class: "btn btn-danger btn-sm"}
