--- a/app/views/things/new.html.erb
+++ b/app/views/things/new.html.erb
@@ -1,9 +1,9 @@
-<div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-  <h4 class="modal-title" id="myModalLabel">Create</h4>
-</div>
-
 <%= form_for(@thing, html: {class: "form-horizontal"}) do |f| %>
+  <div class="modal-footer">
+    <%= link_to "Cancel", '#', class: "btn btn-sm btn-clear a-close-widget" %>
+    <%= f.submit 'Create', class: "btn btn-primary btn-sm" %>
+  </div>
+
   <div class="modal-body">
     <div class="row">
       <div class="col-lg-12">
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <%= link_to "Cancel", '#', :"data-dismiss" => "modal", class: "btn btn-sm btn-clear" %>
+    <%= link_to "Cancel", '#', class: "btn btn-sm btn-clear a-close-widget" %>
     <%= f.submit 'Create', class: "btn btn-primary btn-sm" %>
   </div>
 <% end %>
