Disable drag and drop in tree for now.

--- a/app/assets/javascripts/tree.js.coffee.erb
+++ b/app/assets/javascripts/tree.js.coffee.erb
@@ -36,7 +36,7 @@ eventNodeMove = (e) ->
 $(document).on "ready page:change", ->
   window.$tree = $('#tree')
   $tree.tree
-    dragAndDrop: true
+    dragAndDrop: false
     autoOpen: 1000
     useContextMenu: false
     selectable: true
