--- a/app/views/things/edit.html.erb
+++ b/app/views/things/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@thing, html: {class: "form-horizontal"}) do |f| %>
+<%= form_for(@thing, html: {class: "form-horizontal col-md-8"}) do |f| %>
   <div class="modal-footer">
     <%= link_to "Cancel", '#', class: "btn btn-sm btn-clear a-close-widget" %>
     <%=
