--- a/app/assets/javascripts/things.js.coffee.erb
+++ b/app/assets/javascripts/things.js.coffee.erb
@@ -2,7 +2,7 @@
 # All this logic will automatically be available in application.js.
 # You can use CoffeeScript in this file: http://coffeescript.org/
 
-$(document).on 'click', 'a.a-move-to', ->
+$(document).on 'click', 'a.a-move-marked', ->
   $tree = $('#tree')
   if selected_node = $tree.tree('getSelectedNode')
     container_id = selected_node.id
@@ -15,6 +15,24 @@ $(document).on 'click', 'a.a-move-to', ->
         window.location = window.location
   else
     alert("Choose a container using the tree control to move selected objects inside of it.")
+  return false
+
+$(document).on 'click', 'a.a-clear-marked', ->
+  $tree = $('#tree')
+  jqXHR = $.raj.handleAjaxRequest
+    type: 'post'
+    url: "<%= ::Rails.application.routes.url_helpers.clear_marked_things_path %>"
+  jqXHR.success (data)->
+      window.location = window.location
+  return false
+
+$(document).on 'click', 'a.a-destroy-marked', ->
+  $tree = $('#tree')
+  jqXHR = $.raj.handleAjaxRequest
+    type: 'post'
+    url: "<%= ::Rails.application.routes.url_helpers.destroy_marked_things_path %>"
+  jqXHR.success (data)->
+      window.location = window.location
   return false
 
 class InlineWidget
