--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,34 +1,39 @@
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
+      <% if false %>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      <% end %>
       <a class="navbar-brand" href="<%= thing_path(Thing.world) %>"><%= icon(icon_home, '', class: '') %></a>
       <a href="<%= marked_things_path %>" class="navbar-brand"><%= icon(icon_marked, '', class: '') %>
         (<span class="marked-count"><%= Thing.marked.count %></span>)</a>
+      <a href="<%= tags_path %>" class="navbar-brand"><%= icon('tags', '', class: '') %></a>
     </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= icon(icon_marked, '', class: '') %>
-            (<span class="marked-count"><%= Thing.marked.count %></span>)
-            <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "List", marked_things_path %></li>
-            <li><a href="#">Clear</a></li>
-            <% if false %>
-              <li class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            <% end %>
-          </ul>
-        </li>
-        <li><a href="/tags">Tags</a></li>
-      </ul>
-    </div>
+    <% if false %>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= icon(icon_marked, '', class: '') %>
+              (<span class="marked-count"><%= Thing.marked.count %></span>)
+              <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "List", marked_things_path %></li>
+              <li><a href="#">Clear</a></li>
+              <% if false %>
+                <li class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              <% end %>
+            </ul>
+          </li>
+          <li><a href="/tags">Tags</a></li>
+        </ul>
+      </div>
+    <% end %>
   </div>
 </nav>
