disable outside click closer for inline widget

--- a/app/assets/javascripts/things.js.coffee.erb
+++ b/app/assets/javascripts/things.js.coffee.erb
@@ -100,7 +100,7 @@ $(document).on 'click', 'a.a-edit-thing, a.a-new-thing', ->
     type: 'get'
   jqXHR.success (data) =>
     inlineWidget.open data, inlineWidget.setupThingForm
-    $.raj.bind_hide_on_user_intent_events(a, inlineWidget.widget, inlineWidget.close)
+    # $.raj.bind_hide_on_user_intent_events(a, inlineWidget.widget, inlineWidget.close)
   false
 
 $(document).on 'click', 'a.a-close-widget', ->
