--- a/app/views/things/toggle_marked.js.erb
+++ b/app/views/things/toggle_marked.js.erb
@@ -4,4 +4,4 @@ if(marked)
   element.addClass('marked');
 else
   element.removeClass('marked');
-$('.marked-count').html('<%= @marked_count %>');
+$('.d-marked-count').html('<%= @marked_count %>');
