Convert tree to JBuilder

--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -78,3 +78,14 @@
   background: #eee;
   margin-bottom: 20px;
 }
+
+.c-count {
+  font-style: normal;
+  font-size: 0.8em;
+  background: #CEDDE2;
+  padding: 0px 4px;
+  border-radius: 4px;
+  color: #fff;
+  position: relative;
+  top: -0.1em;
+}
