--- a/app/assets/javascripts/tree.js.coffee.erb
+++ b/app/assets/javascripts/tree.js.coffee.erb
@@ -40,6 +40,7 @@ $(document).on "ready page:change", ->
     autoOpen: 1000
     useContextMenu: false
     selectable: true
+    autoEscape: false
 
   $tree.bind 'tree.click', eventNodeClick
   $tree.bind 'tree.move', eventNodeMove
