--- a/app/views/things/_thing_row.html.erb
+++ b/app/views/things/_thing_row.html.erb
@@ -1,8 +1,8 @@
 <div class="child <%= odd_even %>">
-  <a href="<%= url_for(thing) %>" title="<%= thing.description %>"><%= thing.name %></a> <span class="num_contained" title="number of contained things">(<%= thing.num_contained %>)</span>
+  <a href="<%= url_for(thing) %>" title="<%= thing.description %>"><%= thing.name %></a> <span class="num-contained c-count" title="number of contained things"><%= thing.num_contained %></span>
   <% if defined?(show_container) && show_container %>
     <% if thing.parent_id && thing.container && thing.container.tree_depth > 0 %> <
-      <a href="<%= url_for(thing.container) %>" title="<%= thing.container.description %>"><%= thing.container.name %></a> <span class="num_contained" title="number of contained things">(<%= thing.container.num_contained %>)</span>
+      <a href="<%= url_for(thing.container) %>" title="<%= thing.container.description %>"><%= thing.container.name %></a> <span class="num-contained" title="number of contained things">(<%= thing.container.num_contained %>)</span>
     <% else %>
     <% end -%>
   <% end -%>
