--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
       <% end %>
       <a class="navbar-brand" href="<%= thing_path(Thing.world) %>"><%= icon(icon_home, '', class: '') %></a>
       <a href="<%= marked_things_path %>" class="navbar-brand"><%= icon(icon_marked, '', class: '') %>
-        (<span class="d-marked-count"><%= Thing.marked.count %></span>)</a>
+        <span class="d-marked-count"><%= Thing.marked.count %></span></a>
       <a href="<%= tags_path %>" class="navbar-brand"><%= icon('tags', '', class: '') %></a>
     </div>
     <% if false %>
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= icon(icon_marked, '', class: '') %>
-              (<span class="d-marked-count"><%= Thing.marked.count %></span>)
+              <span class="d-marked-count"><%= Thing.marked.count %></span>
               <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to "List", marked_things_path %></li>
