--- a/app/views/things/index.html.erb
+++ b/app/views/things/index.html.erb
@@ -11,7 +11,9 @@
     <br />
   </div>
   <div class="col-md-4">
+    <div id="tree" data-url="/things/tree.json?current=<%= Thing.world.id %>"></div>
   </div>
-    <%= render :partial=>'quick_search' %>
   <div class="col-md-4">
+    <%= render :partial=>'quick_search' %>
+  </div>
 </div>
