--- a/app/views/things/_form.html.erb
+++ b/app/views/things/_form.html.erb
@@ -20,7 +20,7 @@
   <%= f.label :parent_id, class: "col-lg-3 control-label" %>
   <div class="col-lg-9">
     <%= f.select :parent_id, nested_set_options(Thing.world, @thing) {|i|
-        "#{'-' * i.level} #{i.name}"
+        "#{'– ' * i.level} #{i.name}"
       }, {}, class: "form-control" %>
   </div>
 </div>
