--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,8 +65,8 @@ form#new_tag {
 }
 
 * {
-  user-select: none;
-  -webkit-user-select: none;
+  // user-select: none;
+  // -webkit-user-select: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
