Add description to tags.

--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,6 +1,11 @@
 <h1>Editing Tag</h1>
 
-<%= render 'form' %>
+<div class='row'>
+  <div class="col-md-4">
+    <%= render 'form' %>
+  </div>
+</div>
+
 
 <%= link_to 'Show', @tag %> |
 <%= link_to 'Back', tags_path %>
