--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -15,4 +15,9 @@
     <%= f.text_field :name %>
     <%= f.submit %>
   </div>
+
+  <div class="form-group">
+      <%= f.text_area :description, class: "form-control", placeholder: "Description" %>
+  </div>
+
 <% end %>
