--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -33,7 +33,7 @@
   <tbody>
     <% @tags.each do |tag| %>
       <tr>
-        <td><%= tag.name %></td>
+        <td><%= link_to tag.name, things_path(query: tag.name) %></td>
         <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
         <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
