--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -113,3 +113,8 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
 .thing-body, #tree {
   font-size: 18px;
 }
+
+// Tree compass
+.jqtree-element.current {
+  background: #ded;
+}
