--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,9 +64,13 @@ form#new_tag {
   left: 10em;
 }
 
+// Prevent user select on items we don't want
+.jqtree_common {
+  user-select: none;
+  -webkit-user-select: none;
+}
+
 * {
-  // user-select: none;
-  // -webkit-user-select: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
