Fix bug in partial name spacing

--- a/app/views/things/_thing_row.html.erb
+++ b/app/views/things/_thing_row.html.erb
@@ -7,6 +7,6 @@
     <% end -%>
   <% end -%>
   <span class="actions action">
-    <%= render partial: "actions", locals: {thing: thing} %>
+    <%= render partial: "things/actions", locals: {thing: thing} %>
   </span>
 </div>
